==> RainbowSeeker/X7Pro_Driver/CODE/drivers/drv_spi.c <==
#include "drv_spi.h"
#include "hal/spi/spi.h"
#include "hal/dma/dma.h"
#include "stm32h7xx.h"
#include "driver/io.h"
#include "board_config.h"
#include "drv_dma.h"
#include "nvic.h"
#define SPI_TIMEOUT     5
#define SPI_MAX_NUM     6

static err_t configure(struct spi_device *device,
                       struct spi_configuration *config) {
    struct stm32_spi_bus *bus = (struct stm32_spi_bus *) device->bus;
    SPI_TypeDef *instance = bus->instance;

    if (bus->config.data_width != config->data_width) {
        LL_SPI_SetDataWidth(instance,
                            (config->data_width > 8) ? LL_SPI_DATAWIDTH_16BIT : LL_SPI_DATAWIDTH_8BIT);
        bus->config.data_width = config->data_width;
    }

    if (bus->config.mode != config->mode) {
        /* CPOL */
        LL_SPI_SetClockPolarity(instance,
                                (config->mode & SPI_CPOL) ? LL_SPI_POLARITY_HIGH : LL_SPI_POLARITY_LOW);

        /* CPHA */
        LL_SPI_SetClockPhase(instance,
                             (config->mode & SPI_CPHA) ? LL_SPI_PHASE_2EDGE : LL_SPI_PHASE_1EDGE);

        /* MSB or LSB */
        LL_SPI_SetTransferBitOrder(instance,
                                   (config->mode & SPI_MSB) ? LL_SPI_MSB_FIRST : LL_SPI_LSB_FIRST);

        bus->config.mode = config->mode;
    }

    if (bus->config.max_hz != config->max_hz) {
        uint32_t PCLK;
        LL_RCC_ClocksTypeDef rcc_clocks;
        LL_RCC_GetSystemClocksFreq(&rcc_clocks);
        if (instance == SPI2 || instance == SPI3) {
            PCLK = rcc_clocks.PCLK1_Frequency;
        } else {
            PCLK = rcc_clocks.PCLK2_Frequency;
        }
        /* set baudrate */
        LL_SPI_SetBaudRatePrescaler(instance, spi_cal_prescaler(PCLK / config->max_hz));

        bus->config.max_hz = config->max_hz;
    }
    return E_OK;
}

static err_t transfer(struct spi_device *device, struct spi_message *message) {
    struct stm32_spi_bus *bus = (struct stm32_spi_bus *) device->bus;
    struct spi_configuration *config = &device->config;
    SPI_TypeDef *instance = bus->instance;
    io_tag cs = *(io_tag *) device->parent.user_data;

    if (device->bus->owner != device) {
        /* not the same owner as current, re-configure SPI bus */
        configure(device, &device->config);
        /* set SPI bus owner */
        device->bus->owner = device;
    }

#ifdef SPI_USE_DMA
    if (message->len >= DMA_THRESHOLD) {
        struct dma_device *dma_tx = bus->dma_tx;
        struct dma_device *dma_rx = bus->dma_rx;
        // Check if RX data can be DMAed
        if (!((message->recv_buf) &&
              (dma_rx->instance == BDMA ? (!IS_SRAM4(message->recv_buf)) : (!IS_AXI_SRAM(message->recv_buf)))) &&
            // Check if TX data can be DMAed
            !((message->send_buf) &&
              (dma_tx->instance == BDMA ? (!IS_SRAM4(message->send_buf)) : (!IS_AXI_SRAM(message->send_buf)))) &&
            device_open(&bus->dma_tx->parent, DEVICE_OFLAG_OPEN) == E_OK &&
            device_open(&bus->dma_rx->parent, DEVICE_OFLAG_OPEN) == E_OK) {
            // Intialize the init structures for the first transfer
            if (dma_tx->instance == BDMA) {
                STATIC_BDMA_DATA_AUTO uint8_t dummyTxByte = 0xff;
                STATIC_BDMA_DATA_AUTO uint8_t dummyRxByte;

                if (message->send_buf) {
                    // Flush the D cache to ensure the data to be written is in main memory
                    scb_flush_dcache((void *) message->send_buf, message->len);

                    LL_BDMA_SetMemoryAddress(dma_tx->instance, dma_tx->stream, (uint32_t) message->send_buf);
                    LL_BDMA_SetMemoryIncMode(dma_tx->instance, dma_tx->stream, LL_BDMA_MEMORY_INCREMENT);
                } else {
                    LL_BDMA_SetMemoryAddress(dma_tx->instance, dma_tx->stream, (uint32_t) &dummyTxByte);
                    LL_BDMA_SetMemoryIncMode(dma_tx->instance, dma_tx->stream, 0);
                }
                LL_BDMA_SetDataLength(dma_tx->instance, dma_tx->stream, message->len);

                if (message->recv_buf) {
                    scb_flush_invalidate_dcache(message->recv_buf, message->len);

                    LL_BDMA_SetMemoryAddress(dma_rx->instance, dma_rx->stream, (uint32_t) message->recv_buf);
                    LL_BDMA_SetMemoryIncMode(dma_rx->instance, dma_rx->stream, LL_BDMA_MEMORY_INCREMENT);
                } else {
                    LL_BDMA_SetMemoryAddress(dma_rx->instance, dma_rx->stream, (uint32_t) &dummyRxByte);
                    LL_BDMA_SetMemoryIncMode(dma_rx->instance, dma_rx->stream, 0);
                }
                LL_BDMA_SetDataLength(dma_rx->instance, dma_rx->stream, message->len);
            } else {
                STATIC_DMA_DATA_AUTO uint8_t dummyTxByte = 0xff;
                STATIC_DMA_DATA_AUTO uint8_t dummyRxByte;

                if (message->send_buf) {
                    // Flush the D cache to ensure the data to be written is in main memory
                    scb_flush_dcache((void *) message->send_buf, message->len);

                    LL_DMA_SetMemoryAddress(dma_tx->instance, dma_tx->stream, (uint32_t) message->send_buf);
                    LL_DMA_SetMemoryIncMode(dma_tx->instance, dma_tx->stream, LL_DMA_MEMORY_INCREMENT);
                } else {
                    LL_DMA_SetMemoryAddress(dma_tx->instance, dma_tx->stream, (uint32_t) &dummyTxByte);
                    LL_DMA_SetMemoryIncMode(dma_tx->instance, dma_tx->stream, LL_DMA_MEMORY_NOINCREMENT);
                }
                LL_DMA_SetDataLength(dma_tx->instance, dma_tx->stream, message->len);

                if (message->recv_buf) {
                    scb_flush_invalidate_dcache(message->recv_buf, message->len);

                    LL_DMA_SetMemoryAddress(dma_rx->instance, dma_rx->stream, (uint32_t) message->recv_buf);
                    LL_DMA_SetMemoryIncMode(dma_rx->instance, dma_rx->stream, LL_DMA_MEMORY_INCREMENT);
                } else {
                    LL_DMA_SetMemoryAddress(dma_rx->instance, dma_rx->stream, (uint32_t) &dummyRxByte);
                    LL_DMA_SetMemoryIncMode(dma_rx->instance, dma_rx->stream, LL_DMA_MEMORY_NOINCREMENT);
                }
                LL_DMA_SetDataLength(dma_rx->instance, dma_rx->stream, message->len);
            }

            /* take CS */
            if (message->cs_take) {
                io_set(cs, IO_LOW);
            }

            // Use the correct callback argument
            bus->parent.parent.user_data = device;
            bus->dma_msg.recv_buf = message->recv_buf;
            bus->dma_msg.len = message->len;
            bus->dma_msg.cs_release = message->cs_release;

            //start transfer
            LL_SPI_SetTransferSize(instance, message->len);

            /* Use the Rx interrupt as this occurs once the SPI operation is complete whereas the Tx interrupt
             * occurs earlier when the Tx FIFO is empty, but the SPI operation is still in progress
             */
            if (dma_tx->instance == BDMA) {
                // Clear transfer flags
                LL_EX_DMA_ClearFlag(dma_tx, BDMA_IT_HTIF | BDMA_IT_TEIF | BDMA_IT_TCIF);
                LL_EX_DMA_ClearFlag(dma_rx, BDMA_IT_HTIF | BDMA_IT_TEIF | BDMA_IT_TCIF);

                LL_BDMA_EnableIT_TC(dma_rx->instance, dma_rx->stream);

                LL_BDMA_EnableChannel(dma_tx->instance, dma_tx->stream);
                LL_BDMA_EnableChannel(dma_rx->instance, dma_rx->stream);
            } else {
                // Clear transfer flags
                LL_EX_DMA_ClearFlag(dma_tx, DMA_IT_HTIF | DMA_IT_TEIF | DMA_IT_TCIF);
                LL_EX_DMA_ClearFlag(dma_rx, DMA_IT_HTIF | DMA_IT_TEIF | DMA_IT_TCIF);

                LL_DMA_EnableIT_TC(dma_rx->instance, dma_rx->stream);

                LL_DMA_EnableStream(dma_tx->instance, dma_tx->stream);
                LL_DMA_EnableStream(dma_rx->instance, dma_rx->stream);
            }

            LL_SPI_EnableDMAReq_TX(instance);
            LL_SPI_EnableDMAReq_RX(instance);
            LL_SPI_Enable(instance);
            LL_SPI_StartMasterTransfer(instance);

            return E_BUSY;
        }
    }
#endif
    {
        // Manually work through the segment list performing a transfer for each
        /* take CS */
        if (message->cs_take) {
            io_set(cs, IO_LOW);
        }

        LL_SPI_SetTransferSize(instance, message->len);
        LL_SPI_Enable(instance);
        LL_SPI_StartMasterTransfer(instance);
        if (config->data_width <= 8) {
            const uint8_t *send_ptr = message->send_buf;
            uint8_t *recv_ptr = message->recv_buf;

            while (message->len--) {
                while (!LL_SPI_IsActiveFlag_TXP(instance));
                uint8_t b = send_ptr ? *(send_ptr++) : 0xFF;
                LL_SPI_TransmitData8(instance, b);

                while (!LL_SPI_IsActiveFlag_RXP(instance));
                b = LL_SPI_ReceiveData8(instance);
                if (recv_ptr) {
                    *(recv_ptr++) = b;
                }
            }
        } else if (config->data_width <= 16) {
            uint16_t *send_ptr = (uint16_t *) message->send_buf;
            uint16_t *recv_ptr = (uint16_t *) message->recv_buf;

            while (message->len--) {
                while (!LL_SPI_IsActiveFlag_TXP(instance));
                uint16_t b = send_ptr ? *(send_ptr++) : 0xFF;
                LL_SPI_TransmitData16(instance, b);

                while (!LL_SPI_IsActiveFlag_RXP(instance));
                b = LL_SPI_ReceiveData16(instance);
                if (recv_ptr) {
                    *(recv_ptr++) = b;
                }
            }
        }

        while (!LL_SPI_IsActiveFlag_EOT(instance));
        LL_SPI_ClearFlag_TXTF(instance);
        LL_SPI_Disable(instance);

        /* release CS */
        if (message->cs_release) {
            io_set(cs, IO_HIGH);
        }

        return E_OK;
    }
}

err_t drv_spi_init(void) {
    /* register SPI bus */
    ERROR_TRY(stm32_spi_register(&stm32_spi1,
                                 "spi1",
                                 "dma1_stream0",
                                 "dma1_stream1"));

    ERROR_TRY(stm32_spi_register(&stm32_spi2,
                                 "spi2",
                                 "dma1_stream2",
                                 "dma1_stream3"));

    ERROR_TRY(stm32_spi_register(&stm32_spi4,
                                 "spi4",
                                 "dma1_stream4",
                                 "dma1_stream5"));

    ERROR_TRY(stm32_spi_register(&stm32_spi6,
                                 "spi6",
                                 "bdma_stream0",
                                 "bdma_stream1"));
    return E_OK;
}
